Fix text behind ---

--- a/routes/Contactsection1/section1.contact.scss
+++ b/routes/Contactsection1/section1.contact.scss
@@ -82,7 +82,7 @@
       }
       @media screen and (min-width: 1366px) and (max-width: 1920px) {
         font-size: 8vw;
-        // top: 25%;
+        top: 25%;
         left: 75px;
       }
     }
